--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "freshfiles"
-version = "0.1.0"
+version = "0.2.0"
 description = "Checks if all specified files are fresher (younger) than a given expiry age"
 readme = "README.md"
 authors = [
@@ -10,6 +10,10 @@ requires-python = ">=3.12"
 dependencies = [
     "typer>=0.16.0",
 ]
+
+[project.urls]
+homepage = "https://github.com/maximehk/freshfiles"
+repository = "https://github.com/maximehk/freshfiles"
 
 [project.scripts]
 freshfiles = "freshfiles:main"
